Modified the Code

--- a/tasks.json
+++ b/tasks.json
@@ -7,5 +7,23 @@
     "dueDate": "2025-03-31T15:41:49.393Z",
     "createdAt": "2025-03-30T15:42:16.316Z",
     "updatedAt": "2025-03-30T15:53:53.805Z"
+  },
+  {
+    "id": 1743524615923,
+    "title": "Task 2",
+    "description": "Complete this ",
+    "completed": false,
+    "dueDate": "2025-04-01T16:22:58.743Z",
+    "createdAt": "2025-04-01T16:23:35.923Z",
+    "updatedAt": "2025-04-01T16:23:35.923Z"
+  },
+  {
+    "id": 1743524848974,
+    "title": "Task 4",
+    "description": "Complete this ",
+    "completed": true,
+    "dueDate": "2025-04-02T16:22:58.743Z",
+    "createdAt": "2025-04-01T16:27:28.974Z",
+    "updatedAt": "2025-04-01T16:29:05.792Z"
   }
 ]
